lab2/parser.output
Terminals unused in grammar

   TOKEN_WHILE
   TOKEN_ERROR


State 163 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl decl_list
    3          | %empty

    4 decl: TOKEN_IDENT TOKEN_COLON type TOKEN_SEMICOLON
    5     | TOKEN_IDENT TOKEN_COLON type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB TOKEN_SEMICOLON
    8     | TOKEN_IDENT TOKEN_COLON type_array TOKEN_SEMICOLON
    9     | TOKEN_IDENT TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_CLB args TOKEN_CRB TOKEN_SEMICOLON

   10 stmt_list: stmt stmt_list
   11          | %empty

   12 stmt: unmatched_stmt
   13     | matched_stmt

   14 matched_stmt: decl
   15             | expr TOKEN_SEMICOLON
   16             | assign TOKEN_SEMICOLON
   17             | TOKEN_RETURN expr TOKEN_SEMICOLON
   18             | TOKEN_CLB stmt_list TOKEN_CRB
   19             | for
   20             | TOKEN_PRINT args TOKEN_SEMICOLON
   21             | TOKEN_IF TOKEN_LB expr TOKEN_RB matched_stmt TOKEN_ELSE matched_stmt

   22 unmatched_stmt: TOKEN_IF TOKEN_LB expr TOKEN_RB stmt
   23               | TOKEN_IF TOKEN_LB expr TOKEN_RB matched_stmt TOKEN_ELSE unmatched_stmt

   24 for: TOKEN_FOR TOKEN_LB assign_or_empty TOKEN_SEMICOLON expr_or_empty TOKEN_SEMICOLON expr_or_empty TOKEN_RB stmt

   25 assign_or_empty: assign
   26                | %empty

   27 expr_or_empty: expr
   28              | %empty

   29 assign: expr TOKEN_ASSIGNMENT expr

   30 param_list: empty_param_list
   31           | non_empty_param_list

   32 non_empty_param_list: param
   33                     | param TOKEN_COMMA non_empty_param_list

   34 empty_param_list: %empty

   35 param: TOKEN_IDENT TOKEN_COLON type_array_smaller

   36 type_array: TOKEN_ARRAY TOKEN_SLB TOKEN_SRB type_array_smaller
   37           | TOKEN_ARRAY TOKEN_SLB factor_smaller TOKEN_SRB type_array_smaller

   38 type_array_smaller: TOKEN_ARRAY TOKEN_SLB TOKEN_SRB type_array_smaller
   39                   | TOKEN_ARRAY TOKEN_SLB factor_smaller TOKEN_SRB type_array_smaller
   40                   | type

   41 type_func: TOKEN_FUNCTION type

   42 type: TOKEN_VOID
   43     | TOKEN_INTEGER
   44     | TOKEN_BOOLEAN
   45     | TOKEN_CHAR
   46     | TOKEN_STRING

   47 expr: expr TOKEN_ADD term
   48     | expr TOKEN_SUBTRACT term
   49     | expr TOKEN_EQ term
   50     | expr TOKEN_NE term
   51     | expr TOKEN_GT term
   52     | expr TOKEN_LT term
   53     | expr TOKEN_GE term
   54     | expr TOKEN_LE term
   55     | expr TOKEN_AND term
   56     | expr TOKEN_OR term
   57     | TOKEN_NOT factor_bigger
   58     | TOKEN_INCREMENT factor_bigger
   59     | factor_bigger TOKEN_INCREMENT
   60     | TOKEN_DECREMENT factor_bigger
   61     | factor_bigger TOKEN_DECREMENT
   62     | term

   63 args: non_empty_args
   64     | %empty

   65 non_empty_args: arg
   66               | arg TOKEN_COMMA args

   67 arg: expr

   68 alpha: TOKEN_STRING_LITERAL
   69      | TOKEN_CHAR_LITERAL

   70 term: term TOKEN_MULTIPLY factor_bigger
   71     | term TOKEN_DIVIDE factor_bigger
   72     | term TOKEN_MODULO factor_bigger
   73     | term TOKEN_EXPONENT factor_bigger
   74     | factor_bigger

   75 factor_bigger: factor_smaller

   76 factor_smaller: TOKEN_LB expr TOKEN_RB
   77               | TOKEN_SUBTRACT factor_smaller
   78               | TOKEN_INTEGER_LITERAL
   79               | TOKEN_IDENT
   80               | TOKEN_IDENT TOKEN_LB args TOKEN_RB
   81               | subscript
   82               | alpha
   83               | TOKEN_TRUE
   84               | TOKEN_FALSE

   85 subscript: TOKEN_IDENT TOKEN_SLB expr TOKEN_SRB can_be_empty_subscript

   86 can_be_empty_subscript: TOKEN_SLB expr TOKEN_SRB can_be_empty_subscript
   87                       | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INTEGER_LITERAL (258) 78
TOKEN_ADD (259) 47
TOKEN_SUBTRACT (260) 48 77
TOKEN_MULTIPLY (261) 70
TOKEN_DIVIDE (262) 71
TOKEN_MODULO (263) 72
TOKEN_EXPONENT (264) 73
TOKEN_NOT (265) 57
TOKEN_INCREMENT (266) 58 59
TOKEN_DECREMENT (267) 60 61
TOKEN_WHILE (268)
TOKEN_FOR (269) 24
TOKEN_CHAR (270) 45
TOKEN_BOOLEAN (271) 44
TOKEN_STRING (272) 46
TOKEN_INTEGER (273) 43
TOKEN_VOID (274) 42
TOKEN_TRUE (275) 83
TOKEN_FALSE (276) 84
TOKEN_ARRAY (277) 36 37 38 39
TOKEN_PRINT (278) 20
TOKEN_IF (279) 21 22 23
TOKEN_ELSE (280) 21 23
TOKEN_FUNCTION (281) 41
TOKEN_RETURN (282) 17
TOKEN_IDENT (283) 4 5 6 7 8 9 35 79 80 85
TOKEN_CHAR_LITERAL (284) 69
TOKEN_STRING_LITERAL (285) 68
TOKEN_EQ (286) 49
TOKEN_NE (287) 50
TOKEN_GE (288) 53
TOKEN_LE (289) 54
TOKEN_ASSIGNMENT (290) 5 6 9 29
TOKEN_GT (291) 51
TOKEN_LT (292) 52
TOKEN_COMMA (293) 33 66
TOKEN_COLON (294) 4 5 6 7 8 9 35
TOKEN_AND (295) 55
TOKEN_OR (296) 56
TOKEN_LB (297) 6 7 21 22 23 24 76 80
TOKEN_RB (298) 6 7 21 22 23 24 76 80
TOKEN_CLB (299) 6 9 18
TOKEN_CRB (300) 6 9 18
TOKEN_SLB (301) 36 37 38 39 85 86
TOKEN_SRB (302) 36 37 38 39 85 86
TOKEN_ERROR (303)
TOKEN_SEMICOLON (304) 4 5 7 8 9 15 16 17 20 24


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
decl_list (52)
    on left: 2 3, on right: 1 2
decl (53)
    on left: 4 5 6 7 8 9, on right: 2 14
stmt_list (54)
    on left: 10 11, on right: 6 10 18
stmt (55)
    on left: 12 13, on right: 10 22 24
matched_stmt (56)
    on left: 14 15 16 17 18 19 20 21, on right: 13 21 23
unmatched_stmt (57)
    on left: 22 23, on right: 12 23
for (58)
    on left: 24, on right: 19
assign_or_empty (59)
    on left: 25 26, on right: 24
expr_or_empty (60)
    on left: 27 28, on right: 24
assign (61)
    on left: 29, on right: 16 25
param_list (62)
    on left: 30 31, on right: 6 7
non_empty_param_list (63)
    on left: 32 33, on right: 31 33
empty_param_list (64)
    on left: 34, on right: 30
param (65)
    on left: 35, on right: 32 33
type_array (66)
    on left: 36 37, on right: 8 9
type_array_smaller (67)
    on left: 38 39 40, on right: 35 36 37 38 39
type_func (68)
    on left: 41, on right: 6 7
type (69)
    on left: 42 43 44 45 46, on right: 4 5 40 41
expr (70)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62, on right:
    5 15 17 21 22 23 27 29 47 48 49 50 51 52 53 54 55 56 67 76 85 86
args (71)
    on left: 63 64, on right: 9 20 66 80
non_empty_args (72)
    on left: 65 66, on right: 63
arg (73)
    on left: 67, on right: 65 66
alpha (74)
    on left: 68 69, on right: 82
term (75)
    on left: 70 71 72 73 74, on right: 47 48 49 50 51 52 53 54 55 56
    62 70 71 72 73
factor_bigger (76)
    on left: 75, on right: 57 58 59 60 61 70 71 72 73 74
factor_smaller (77)
    on left: 76 77 78 79 80 81 82 83 84, on right: 37 39 75 77
subscript (78)
    on left: 85, on right: 81
can_be_empty_subscript (79)
    on left: 86 87, on right: 85 86


State 0

    0 $accept: . program $end

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    program    go to state 2
    decl_list  go to state 3
    decl       go to state 4


State 1

    4 decl: TOKEN_IDENT . TOKEN_COLON type TOKEN_SEMICOLON
    5     | TOKEN_IDENT . TOKEN_COLON type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | TOKEN_IDENT . TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT . TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB TOKEN_SEMICOLON
    8     | TOKEN_IDENT . TOKEN_COLON type_array TOKEN_SEMICOLON
    9     | TOKEN_IDENT . TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_CLB args TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_COLON  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: decl_list .

    $default  reduce using rule 1 (program)


State 4

    2 decl_list: decl . decl_list

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 3 (decl_list)

    decl_list  go to state 7
    decl       go to state 4


State 5

    4 decl: TOKEN_IDENT TOKEN_COLON . type TOKEN_SEMICOLON
    5     | TOKEN_IDENT TOKEN_COLON . type TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON
    6     | TOKEN_IDENT TOKEN_COLON . type_func TOKEN_LB param_list TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON . type_func TOKEN_LB param_list TOKEN_RB TOKEN_SEMICOLON
    8     | TOKEN_IDENT TOKEN_COLON . type_array TOKEN_SEMICOLON
    9     | TOKEN_IDENT TOKEN_COLON . type_array TOKEN_ASSIGNMENT TOKEN_CLB args TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_CHAR      shift, and go to state 8
    TOKEN_BOOLEAN   shift, and go to state 9
    TOKEN_STRING    shift, and go to state 10
    TOKEN_INTEGER   shift, and go to state 11
    TOKEN_VOID      shift, and go to state 12
    TOKEN_ARRAY     shift, and go to state 13
    TOKEN_FUNCTION  shift, and go to state 14

    type_array  go to state 15
    type_func   go to state 16
    type        go to state 17


State 6

    0 $accept: program $end .

    $default  accept


State 7

    2 decl_list: decl decl_list .

    $default  reduce using rule 2 (decl_list)


State 8

   45 type: TOKEN_CHAR .

    $default  reduce using rule 45 (type)


State 9

   44 type: TOKEN_BOOLEAN .

    $default  reduce using rule 44 (type)


State 10

   46 type: TOKEN_STRING .

    $default  reduce using rule 46 (type)


State 11

   43 type: TOKEN_INTEGER .

    $default  reduce using rule 43 (type)


State 12

   42 type: TOKEN_VOID .

    $default  reduce using rule 42 (type)


State 13

   36 type_array: TOKEN_ARRAY . TOKEN_SLB TOKEN_SRB type_array_smaller
   37           | TOKEN_ARRAY . TOKEN_SLB factor_smaller TOKEN_SRB type_array_smaller

    TOKEN_SLB  shift, and go to state 18


State 14

   41 type_func: TOKEN_FUNCTION . type

    TOKEN_CHAR     shift, and go to state 8
    TOKEN_BOOLEAN  shift, and go to state 9
    TOKEN_STRING   shift, and go to state 10
    TOKEN_INTEGER  shift, and go to state 11
    TOKEN_VOID     shift, and go to state 12

    type  go to state 19


State 15

    8 decl: TOKEN_IDENT TOKEN_COLON type_array . TOKEN_SEMICOLON
    9     | TOKEN_IDENT TOKEN_COLON type_array . TOKEN_ASSIGNMENT TOKEN_CLB args TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_ASSIGNMENT  shift, and go to state 20
    TOKEN_SEMICOLON   shift, and go to state 21


State 16

    6 decl: TOKEN_IDENT TOKEN_COLON type_func . TOKEN_LB param_list TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON type_func . TOKEN_LB param_list TOKEN_RB TOKEN_SEMICOLON

    TOKEN_LB  shift, and go to state 22


State 17

    4 decl: TOKEN_IDENT TOKEN_COLON type . TOKEN_SEMICOLON
    5     | TOKEN_IDENT TOKEN_COLON type . TOKEN_ASSIGNMENT expr TOKEN_SEMICOLON

    TOKEN_ASSIGNMENT  shift, and go to state 23
    TOKEN_SEMICOLON   shift, and go to state 24


State 18

   36 type_array: TOKEN_ARRAY TOKEN_SLB . TOKEN_SRB type_array_smaller
   37           | TOKEN_ARRAY TOKEN_SLB . factor_smaller TOKEN_SRB type_array_smaller

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32
    TOKEN_SRB              shift, and go to state 33

    alpha           go to state 34
    factor_smaller  go to state 35
    subscript       go to state 36


State 19

   41 type_func: TOKEN_FUNCTION type .

    $default  reduce using rule 41 (type_func)


State 20

    9 decl: TOKEN_IDENT TOKEN_COLON type_array TOKEN_ASSIGNMENT . TOKEN_CLB args TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_CLB  shift, and go to state 37


State 21

    8 decl: TOKEN_IDENT TOKEN_COLON type_array TOKEN_SEMICOLON .

    $default  reduce using rule 8 (decl)


State 22

    6 decl: TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB . param_list TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB . param_list TOKEN_RB TOKEN_SEMICOLON

    TOKEN_IDENT  shift, and go to state 38

    $default  reduce using rule 34 (empty_param_list)

    param_list            go to state 39
    non_empty_param_list  go to state 40
    empty_param_list      go to state 41
    param                 go to state 42


State 23

    5 decl: TOKEN_IDENT TOKEN_COLON type TOKEN_ASSIGNMENT . expr TOKEN_SEMICOLON

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_NOT              shift, and go to state 43
    TOKEN_INCREMENT        shift, and go to state 44
    TOKEN_DECREMENT        shift, and go to state 45
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    expr            go to state 46
    alpha           go to state 34
    term            go to state 47
    factor_bigger   go to state 48
    factor_smaller  go to state 49
    subscript       go to state 36


State 24

    4 decl: TOKEN_IDENT TOKEN_COLON type TOKEN_SEMICOLON .

    $default  reduce using rule 4 (decl)


State 25

   78 factor_smaller: TOKEN_INTEGER_LITERAL .

    $default  reduce using rule 78 (factor_smaller)


State 26

   77 factor_smaller: TOKEN_SUBTRACT . factor_smaller

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    alpha           go to state 34
    factor_smaller  go to state 50
    subscript       go to state 36


State 27

   83 factor_smaller: TOKEN_TRUE .

    $default  reduce using rule 83 (factor_smaller)


State 28

   84 factor_smaller: TOKEN_FALSE .

    $default  reduce using rule 84 (factor_smaller)


State 29

   79 factor_smaller: TOKEN_IDENT .
   80               | TOKEN_IDENT . TOKEN_LB args TOKEN_RB
   85 subscript: TOKEN_IDENT . TOKEN_SLB expr TOKEN_SRB can_be_empty_subscript

    TOKEN_LB   shift, and go to state 51
    TOKEN_SLB  shift, and go to state 52

    $default  reduce using rule 79 (factor_smaller)


State 30

   69 alpha: TOKEN_CHAR_LITERAL .

    $default  reduce using rule 69 (alpha)


State 31

   68 alpha: TOKEN_STRING_LITERAL .

    $default  reduce using rule 68 (alpha)


State 32

   76 factor_smaller: TOKEN_LB . expr TOKEN_RB

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_NOT              shift, and go to state 43
    TOKEN_INCREMENT        shift, and go to state 44
    TOKEN_DECREMENT        shift, and go to state 45
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    expr            go to state 53
    alpha           go to state 34
    term            go to state 47
    factor_bigger   go to state 48
    factor_smaller  go to state 49
    subscript       go to state 36


State 33

   36 type_array: TOKEN_ARRAY TOKEN_SLB TOKEN_SRB . type_array_smaller

    TOKEN_CHAR     shift, and go to state 8
    TOKEN_BOOLEAN  shift, and go to state 9
    TOKEN_STRING   shift, and go to state 10
    TOKEN_INTEGER  shift, and go to state 11
    TOKEN_VOID     shift, and go to state 12
    TOKEN_ARRAY    shift, and go to state 54

    type_array_smaller  go to state 55
    type                go to state 56


State 34

   82 factor_smaller: alpha .

    $default  reduce using rule 82 (factor_smaller)


State 35

   37 type_array: TOKEN_ARRAY TOKEN_SLB factor_smaller . TOKEN_SRB type_array_smaller

    TOKEN_SRB  shift, and go to state 57


State 36

   81 factor_smaller: subscript .

    $default  reduce using rule 81 (factor_smaller)


State 37

    9 decl: TOKEN_IDENT TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_CLB . args TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_NOT              shift, and go to state 43
    TOKEN_INCREMENT        shift, and go to state 44
    TOKEN_DECREMENT        shift, and go to state 45
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    $default  reduce using rule 64 (args)

    expr            go to state 58
    args            go to state 59
    non_empty_args  go to state 60
    arg             go to state 61
    alpha           go to state 34
    term            go to state 47
    factor_bigger   go to state 48
    factor_smaller  go to state 49
    subscript       go to state 36


State 38

   35 param: TOKEN_IDENT . TOKEN_COLON type_array_smaller

    TOKEN_COLON  shift, and go to state 62


State 39

    6 decl: TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list . TOKEN_RB TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list . TOKEN_RB TOKEN_SEMICOLON

    TOKEN_RB  shift, and go to state 63


State 40

   31 param_list: non_empty_param_list .

    $default  reduce using rule 31 (param_list)


State 41

   30 param_list: empty_param_list .

    $default  reduce using rule 30 (param_list)


State 42

   32 non_empty_param_list: param .
   33                     | param . TOKEN_COMMA non_empty_param_list

    TOKEN_COMMA  shift, and go to state 64

    $default  reduce using rule 32 (non_empty_param_list)


State 43

   57 expr: TOKEN_NOT . factor_bigger

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    alpha           go to state 34
    factor_bigger   go to state 65
    factor_smaller  go to state 49
    subscript       go to state 36


State 44

   58 expr: TOKEN_INCREMENT . factor_bigger

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    alpha           go to state 34
    factor_bigger   go to state 66
    factor_smaller  go to state 49
    subscript       go to state 36


State 45

   60 expr: TOKEN_DECREMENT . factor_bigger

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    alpha           go to state 34
    factor_bigger   go to state 67
    factor_smaller  go to state 49
    subscript       go to state 36


State 46

    5 decl: TOKEN_IDENT TOKEN_COLON type TOKEN_ASSIGNMENT expr . TOKEN_SEMICOLON
   47 expr: expr . TOKEN_ADD term
   48     | expr . TOKEN_SUBTRACT term
   49     | expr . TOKEN_EQ term
   50     | expr . TOKEN_NE term
   51     | expr . TOKEN_GT term
   52     | expr . TOKEN_LT term
   53     | expr . TOKEN_GE term
   54     | expr . TOKEN_LE term
   55     | expr . TOKEN_AND term
   56     | expr . TOKEN_OR term

    TOKEN_ADD        shift, and go to state 68
    TOKEN_SUBTRACT   shift, and go to state 69
    TOKEN_EQ         shift, and go to state 70
    TOKEN_NE         shift, and go to state 71
    TOKEN_GE         shift, and go to state 72
    TOKEN_LE         shift, and go to state 73
    TOKEN_GT         shift, and go to state 74
    TOKEN_LT         shift, and go to state 75
    TOKEN_AND        shift, and go to state 76
    TOKEN_OR         shift, and go to state 77
    TOKEN_SEMICOLON  shift, and go to state 78


State 47

   62 expr: term .
   70 term: term . TOKEN_MULTIPLY factor_bigger
   71     | term . TOKEN_DIVIDE factor_bigger
   72     | term . TOKEN_MODULO factor_bigger
   73     | term . TOKEN_EXPONENT factor_bigger

    TOKEN_MULTIPLY  shift, and go to state 79
    TOKEN_DIVIDE    shift, and go to state 80
    TOKEN_MODULO    shift, and go to state 81
    TOKEN_EXPONENT  shift, and go to state 82

    $default  reduce using rule 62 (expr)


State 48

   59 expr: factor_bigger . TOKEN_INCREMENT
   61     | factor_bigger . TOKEN_DECREMENT
   74 term: factor_bigger .

    TOKEN_INCREMENT  shift, and go to state 83
    TOKEN_DECREMENT  shift, and go to state 84

    $default  reduce using rule 74 (term)


State 49

   75 factor_bigger: factor_smaller .

    $default  reduce using rule 75 (factor_bigger)


State 50

   77 factor_smaller: TOKEN_SUBTRACT factor_smaller .

    $default  reduce using rule 77 (factor_smaller)


State 51

   80 factor_smaller: TOKEN_IDENT TOKEN_LB . args TOKEN_RB

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_NOT              shift, and go to state 43
    TOKEN_INCREMENT        shift, and go to state 44
    TOKEN_DECREMENT        shift, and go to state 45
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    $default  reduce using rule 64 (args)

    expr            go to state 58
    args            go to state 85
    non_empty_args  go to state 60
    arg             go to state 61
    alpha           go to state 34
    term            go to state 47
    factor_bigger   go to state 48
    factor_smaller  go to state 49
    subscript       go to state 36


State 52

   85 subscript: TOKEN_IDENT TOKEN_SLB . expr TOKEN_SRB can_be_empty_subscript

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_NOT              shift, and go to state 43
    TOKEN_INCREMENT        shift, and go to state 44
    TOKEN_DECREMENT        shift, and go to state 45
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    expr            go to state 86
    alpha           go to state 34
    term            go to state 47
    factor_bigger   go to state 48
    factor_smaller  go to state 49
    subscript       go to state 36


State 53

   47 expr: expr . TOKEN_ADD term
   48     | expr . TOKEN_SUBTRACT term
   49     | expr . TOKEN_EQ term
   50     | expr . TOKEN_NE term
   51     | expr . TOKEN_GT term
   52     | expr . TOKEN_LT term
   53     | expr . TOKEN_GE term
   54     | expr . TOKEN_LE term
   55     | expr . TOKEN_AND term
   56     | expr . TOKEN_OR term
   76 factor_smaller: TOKEN_LB expr . TOKEN_RB

    TOKEN_ADD       shift, and go to state 68
    TOKEN_SUBTRACT  shift, and go to state 69
    TOKEN_EQ        shift, and go to state 70
    TOKEN_NE        shift, and go to state 71
    TOKEN_GE        shift, and go to state 72
    TOKEN_LE        shift, and go to state 73
    TOKEN_GT        shift, and go to state 74
    TOKEN_LT        shift, and go to state 75
    TOKEN_AND       shift, and go to state 76
    TOKEN_OR        shift, and go to state 77
    TOKEN_RB        shift, and go to state 87


State 54

   38 type_array_smaller: TOKEN_ARRAY . TOKEN_SLB TOKEN_SRB type_array_smaller
   39                   | TOKEN_ARRAY . TOKEN_SLB factor_smaller TOKEN_SRB type_array_smaller

    TOKEN_SLB  shift, and go to state 88


State 55

   36 type_array: TOKEN_ARRAY TOKEN_SLB TOKEN_SRB type_array_smaller .

    $default  reduce using rule 36 (type_array)


State 56

   40 type_array_smaller: type .

    $default  reduce using rule 40 (type_array_smaller)


State 57

   37 type_array: TOKEN_ARRAY TOKEN_SLB factor_smaller TOKEN_SRB . type_array_smaller

    TOKEN_CHAR     shift, and go to state 8
    TOKEN_BOOLEAN  shift, and go to state 9
    TOKEN_STRING   shift, and go to state 10
    TOKEN_INTEGER  shift, and go to state 11
    TOKEN_VOID     shift, and go to state 12
    TOKEN_ARRAY    shift, and go to state 54

    type_array_smaller  go to state 89
    type                go to state 56


State 58

   47 expr: expr . TOKEN_ADD term
   48     | expr . TOKEN_SUBTRACT term
   49     | expr . TOKEN_EQ term
   50     | expr . TOKEN_NE term
   51     | expr . TOKEN_GT term
   52     | expr . TOKEN_LT term
   53     | expr . TOKEN_GE term
   54     | expr . TOKEN_LE term
   55     | expr . TOKEN_AND term
   56     | expr . TOKEN_OR term
   67 arg: expr .

    TOKEN_ADD       shift, and go to state 68
    TOKEN_SUBTRACT  shift, and go to state 69
    TOKEN_EQ        shift, and go to state 70
    TOKEN_NE        shift, and go to state 71
    TOKEN_GE        shift, and go to state 72
    TOKEN_LE        shift, and go to state 73
    TOKEN_GT        shift, and go to state 74
    TOKEN_LT        shift, and go to state 75
    TOKEN_AND       shift, and go to state 76
    TOKEN_OR        shift, and go to state 77

    $default  reduce using rule 67 (arg)


State 59

    9 decl: TOKEN_IDENT TOKEN_COLON type_array TOKEN_ASSIGNMENT TOKEN_CLB args . TOKEN_CRB TOKEN_SEMICOLON

    TOKEN_CRB  shift, and go to state 90


State 60

   63 args: non_empty_args .

    $default  reduce using rule 63 (args)


State 61

   65 non_empty_args: arg .
   66               | arg . TOKEN_COMMA args

    TOKEN_COMMA  shift, and go to state 91

    $default  reduce using rule 65 (non_empty_args)


State 62

   35 param: TOKEN_IDENT TOKEN_COLON . type_array_smaller

    TOKEN_CHAR     shift, and go to state 8
    TOKEN_BOOLEAN  shift, and go to state 9
    TOKEN_STRING   shift, and go to state 10
    TOKEN_INTEGER  shift, and go to state 11
    TOKEN_VOID     shift, and go to state 12
    TOKEN_ARRAY    shift, and go to state 54

    type_array_smaller  go to state 92
    type                go to state 56


State 63

    6 decl: TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB . TOKEN_ASSIGNMENT TOKEN_CLB stmt_list TOKEN_CRB
    7     | TOKEN_IDENT TOKEN_COLON type_func TOKEN_LB param_list TOKEN_RB . TOKEN_SEMICOLON

    TOKEN_ASSIGNMENT  shift, and go to state 93
    TOKEN_SEMICOLON   shift, and go to state 94


State 64

   33 non_empty_param_list: param TOKEN_COMMA . non_empty_param_list

    TOKEN_IDENT  shift, and go to state 38

    non_empty_param_list  go to state 95
    param                 go to state 42


State 65

   57 expr: TOKEN_NOT factor_bigger .

    $default  reduce using rule 57 (expr)


State 66

   58 expr: TOKEN_INCREMENT factor_bigger .

    $default  reduce using rule 58 (expr)


State 67

   60 expr: TOKEN_DECREMENT factor_bigger .

    $default  reduce using rule 60 (expr)


State 68

   47 expr: expr TOKEN_ADD . term

    TOKEN_INTEGER_LITERAL  shift, and go to state 25
    TOKEN_SUBTRACT         shift, and go to state 26
    TOKEN_TRUE             shift, and go to state 27
    TOKEN_FALSE            shift, and go to state 28
    TOKEN_IDENT            shift, and go to state 29
    TOKEN_CHAR_LITERAL     shift, and go to state 30
    TOKEN_STRING_LITERAL   shift, and go to state 31
    TOKEN_LB               shift, and go to state 32

    alpha           go to state 34
    term            go to state 96
    factor_bigger   go to state 97
    factor_smaller  go to state 49
    subscript       go to state 36


State 69

   48 expr: expr TOKEN_SUBTRACT . term
